<resources>
    <string name="app_name" translatable="false">Barinsta</string>
    <string name="action_about">About</string>
    <string name="action_dms">Direct Messages</string>
    <string name="action_settings">Settings</string>
    <string name="action_download">Download</string>
    <string name="action_github" translatable="false">GitHub</string>
    <string name="action_fdroid" translatable="false">F-Droid</string>
    <string name="action_search">Search username…</string>
    <string name="action_compare">Compare</string>
    <string name="clipboard_error">Error copying text</string>
    <string name="clipboard_copied">Copied to clipboard!</string>
    <string name="report">Report</string>
    <string name="set_password">Protect file with password</string>
    <string name="password_no_max">Password</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="confirm">Confirm</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_discover">Discover</string>
    <string name="title_comments">Comments</string>
    <string name="title_notifications">Activity</string>
    <string name="update_check">Check for updates at startup</string>
    <string name="flag_secure">Block screenshots &amp; app preview</string>
    <string name="download_user_folder">Download posts to username folders</string>
    <string name="download_prepend_username">Prepend Username to Filename</string>
    <string name="mark_as_seen_setting">Mark stories as seen after viewing</string>
    <string name="mark_as_seen_setting_summary">Story author will know you viewed it</string>
    <string name="hide_muted_reels_setting">Hide muted stories from feed</string>
    <string name="dm_mark_as_seen_setting">Mark DM as seen after viewing</string>
    <string name="dm_mark_as_seen_setting_summary">Other members will know you viewed it</string>
    <string name="activity_setting">Enable activity notifications</string>
    <string name="story_sort_setting">Feed stories sort</string>
    <string name="error_loading_profile">Error loading profile! Is the username valid? If so, you may be ratelimited.</string>
    <string name="error_loading_profile_loggedin">Error loading profile! Is the username valid? Or did they block you?</string>
    <string name="error_loading_hashtag">Error loading hashtag! Is the name valid?</string>
    <string name="error_loading_location">Error loading location! Is the URL valid?</string>
    <string name="error_creating_folders">Error creating Download folder(s).</string>
    <string name="save_to_folder">Save to custom folder</string>
    <string name="select_folder">Select folder</string>
    <string name="theme_settings">Theme</string>
    <string name="login_settings">Only affects logged-in users:</string>
    <string name="anonymous_settings">Only affects anonymous users:</string>
    <string name="select_language">Language</string>
    <plurals name="main_posts_count">
        <item quantity="one">%s\nPost</item>
        <item quantity="other">%s\nPosts</item>
    </plurals>
    <plurals name="main_posts_count_inline">
        <item quantity="one">%s Post</item>
        <item quantity="other">%s Posts</item>
    </plurals>
    <plurals name="main_posts_followers">
        <item quantity="one">%s\nFollower</item>
        <item quantity="other">%s\nFollowers</item>
    </plurals>
    <string name="main_posts_following">%s\nFollowing</string>
    <string name="post_viewer_autoplay_video">Autoplay videos</string>
    <string name="post_viewer_background_play">Continue videos in background</string>
    <string name="post_viewer_background_play_summary">Do not pause videos when the app is out of focus</string>
    <string name="post_viewer_muted_autoplay">Always mute videos</string>
    <string name="post_viewer_show_captions">Always show post captions</string>
    <string name="post_viewer_download_dialog_title">Select what to download</string>
    <string name="post_viewer_download_current">Current</string>
    <string name="post_viewer_download_album">Whole Album</string>
    <string name="show_stories">Show stories</string>
    <string name="no_more_stories">No more stories!</string>
    <string name="be_patient">Be patient!</string>
    <string name="view_story_post">View Post</string>
    <string name="view_post">View Post</string>
    <string name="spotify">Spotify</string>
    <string name="vote_story_poll">Vote</string>
    <string name="votef_story_poll">Vote successful!</string>
    <string name="voted_story_poll">You have already voted!</string>
    <string name="respond_story">Respond</string>
    <string name="answer_hint">Answer…</string>
    <string name="answered_story">Answer successful!</string>
    <plurals name="slider_info" comment="For slider stickers in stories, eg. 3 responses averaging 17.38%">
        <item quantity="one">%d response averaging %s</item>
        <item quantity="other">%d responses averaging %s</item>
    </plurals>
    <string name="slider_answer">Your answer: %s</string>
    <string name="reply_story">Reply to story</string>
    <string name="reply_hint">Reply…</string>
    <string name="story_quiz">Quiz</string>
    <string name="story_slider">Slider</string>
    <string name="story_quizzed">You have already answered!</string>
    <string name="story_mentions">Mentions</string>
    <string name="priv_acc">This Account is Private</string>
    <string name="priv_acc_confirm">You won\'t be able to access posts after unfollowing! Are you sure?</string>
    <string name="no_acc">You can log in via More -&gt; Account on the bottom-right corner or you can view public accounts without login!</string>
    <string name="empty_acc">This Account has No Posts</string>
    <string name="empty_list">No Such Posts!</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="logout_summary">Browse Instagram anonymously</string>
    <string name="remove_all_acc">Remove all accounts</string>
    <string name="remove_all_acc_warning">This will remove all added accounts from the app!\nTo remove just one account, long tap the account from the account switcher dialog.\nDo you want to continue?</string>
    <string name="time_settings">Date format</string>
    <string name="saved_create_collection">Create new collection</string>
    <string name="edit_collection">Edit collection name</string>
    <string name="delete_collection">Delete collection</string>
    <string name="delete_collection_confirm">Are you sure you want to delete this collection?</string>
    <string name="delete_collection_note">All contained media will remain in other collections.</string>
    <string name="add_to_collection">Add to collection...</string>
    <string name="remove_from_collection">Remove from collection</string>
    <string name="liked">Liked</string>
    <string name="saved">Saved</string>
    <string name="tagged">Tagged</string>
    <string name="dm_person">Message</string>
    <string name="like_without_count">Like</string>
    <string name="unlike_without_count">Unlike</string>
    <string name="bookmark">Bookmark</string>
    <string name="unbookmark">Unbookmark</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="favorite_short" comment="Adjective, not verb">Favorite</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="restrict">Restrict</string>
    <string name="unrestrict">Unrestrict</string>
    <string name="mute_stories">Mute stories</string>
    <string name="mute_posts">Mute posts</string>
    <string name="unmute_stories">Unmute stories</string>
    <string name="unmute_posts">Unmute posts</string>
    <string name="remove_follower">Remove follower</string>
    <string name="bio_copy">Copy bio</string>
    <string name="bio_translate">Translate bio</string>
    <string name="status_mutual">Mutual</string>
    <string name="status_following">Following</string>
    <string name="status_follower">Follower</string>
    <string name="map">Map</string>
    <string name="dialog_export_accounts">Accounts</string>
    <string name="dialog_export_settings">Settings</string>
    <string name="dialog_export_favorites">Favorites</string>
    <string name="dialog_import_success">Successfully imported!</string>
    <string name="dialog_import_failed">Failed to import!</string>
    <string name="dialog_export_success">Successfully exported!</string>
    <string name="dialog_export_failed">Failed to export!</string>
    <string name="refresh">Refresh</string>
    <string name="get_cookies">Get cookies</string>
    <string name="desktop_2fa">Desktop Mode</string>
    <string name="time_settings_title_custom">Use custom format</string>
    <string name="time_settings_title_separator">Separator</string>
    <string name="time_settings_title_time_format">Time Format</string>
    <string name="time_settings_title_date_format">Date Format</string>
    <string name="time_settings_title_preview">Preview</string>
    <string name="time_settings_swap_time">Swap Time and Date positions</string>
    <string name="quick_access_cannot_delete_curr">Cannot delete currently in use account</string>
    <string name="quick_access_confirm_delete">Are you sure you want to delete \'%s\'?</string>
    <string name="open_profile">Open profile</string>
    <string name="view_story">View story</string>
    <string name="view_pfp">View profile picture</string>
    <string name="dms_inbox_raven_message_unknown">Unsupported message type</string>
    <string name="dms_inbox_unsend">Unsend message</string>
    <string name="dms_inbox_giphy">View on GIPHY</string>
    <string name="dms_inbox_shared_post">%s shared a post by @%s</string>
    <string name="dms_inbox_shared_image">%s shared an image</string>
    <string name="dms_inbox_shared_video">%s shared a video</string>
    <string name="dms_inbox_shared_message">%s sent a message</string>
    <string name="dms_inbox_shared_gif">%s shared a gif</string>
    <string name="dms_inbox_shared_sticker">%s shared a sticker</string>
    <string name="dms_inbox_shared_profile">%s shared a profile: @%s</string>
    <string name="dms_inbox_shared_location">%s shared a location: %s</string>
    <string name="dms_inbox_shared_highlight">%s shared a story highlight by @%s</string>
    <string name="dms_inbox_shared_story">%s shared a story by @%s</string>
    <string name="dms_inbox_shared_voice">%s sent a voice message</string>
    <string name="dms_inbox_shared_clip">%s shared a clip by @%s</string>
    <string name="dms_inbox_shared_igtv">%s shared an IGTV video by @%s</string>
    <string name="dms_inbox_replied_story_outgoing">You replied to their story: %s</string>
    <string name="crash_descr">Oops.. the app crashed, but don\'t worry you can send error report to the developer to help him fix the issue. (:</string>
    <string name="action_notif">Activity</string>
    <string name="action_ayml">Suggested users</string>
    <string name="more">More</string>
    <string name="pref_category_general">General</string>
    <string name="pref_category_downloads">Downloads</string>
    <string name="pref_category_locale">Locale</string>
    <string name="backup_and_restore">Backup &amp; Restore</string>
    <string name="create_backup">Create new backup file</string>
    <string name="restore_backup">Restore from existing backup file</string>
    <string name="file_chosen_label">File:</string>
    <string name="enter_password">Enter password</string>
    <string name="layout">Layout</string>
    <string name="pref_category_stories">Stories</string>
    <string name="pref_category_dm">DM</string>
    <string name="pref_category_notifications">Notifications</string>
    <string name="pref_category_post">Post</string>
</resources>