<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/layout"
        android:title="@string/layout"
        app:showAsAction="never" />

    <item
        android:id="@+id/chaining"
        android:title="@string/action_ayml"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/block"
        android:icon="@drawable/ic_block_24"
        android:title="@string/block"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/restrict"
        android:icon="@drawable/ic_highlight_off_24"
        android:title="@string/restrict"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/remove_follower"
        android:icon="@drawable/ic_block_24"
        android:title="@string/remove_follower"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/mute_stories"
        android:icon="@drawable/ic_highlight_off_24"
        android:title="@string/mute_stories"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/mute_posts"
        android:icon="@drawable/ic_highlight_off_24"
        android:title="@string/mute_posts"
        android:visible="false"
        app:showAsAction="never" />
</menu>