<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_dms"
        android:icon="@drawable/ic_round_send_24"
        android:title="@string/reply_story"
        android:titleCondensed="@string/reply_story"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_profile"
        android:title="@string/open_profile"
        android:titleCondensed="@string/open_profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_download"
        android:icon="@drawable/ic_download"
        android:title="@string/action_download"
        android:titleCondensed="@string/action_download"
        app:showAsAction="never" />
</menu>