<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add"
        android:title="@string/add_to_collection"
        android:titleCondensed="@string/action_download"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_cancel"
        android:title="@string/remove_from_collection"
        android:titleCondensed="@string/action_download"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_download"
        android:icon="@drawable/ic_download"
        android:title="@string/action_download"
        android:titleCondensed="@string/action_download"
        app:showAsAction="always" />
</menu>