<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:viewBindingIgnore="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:paddingStart="12dp"
        android:paddingLeft="12dp"
        android:paddingEnd="12dp"
        android:paddingRight="12dp"
        android:scrollbars="vertical"
        android:text="@string/crash_descr"
        android:textSize="16sp" />

    <LinearLayout
        style="?android:buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="end|center_vertical">

        <Button
            android:id="@+id/btnCancel"
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/cancel"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnReport"
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/report"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>